Commit: Current

Updated nbtmap.h
villager_shops plugin is more stable
Ported telepearl plugin from master branch to dev-1.13
skulldrop plugin now has a command to give yourself a player's head
Added new plugin `warp_points`

Commit: 47d2437

Added a new library `nbtmap.h`:
* Fast and easy NBT parsing header-only library
* Very small, has no error checking at all. Assumes all NBT is valid and works 100% with all valid NBT
* No type checks or conversions, everything is treated as a string
* Ideal for parsing `data get` requests from the server, but can also be used to build NBT
* See `./src/plugins/villager_shops.cpp` for example usage

API Changes:
* Added a new event `onPluginsLoaded` triggers before server startup after every extension and plugin has finished loading
* Added `hmResolveFlag()` and `hmResolveFlags()` both return the integer representation of a flag string

Plugin Changes:
* baseplayerinfo.cpp now uses nbtmap.h
* New plugin: `villager_shops`:
* * Create survival shops using villagers
* * Create and restock shops from a chest
* * All payments made in the shop are tracked and given to the shop owner

Commit: ad883f7

Updated halfMod API to v0.2.4
Updated halfMod Engine to v0.1.3
Updated halfShell to v0.3.3
Full changelog: https://github.com/nigelSaysHesHappy/halfMod/blob/1.13-dev/changelog.txt

halfMod API Changes:
* Added Console Variables (aka ConVars or cvars)
* * Defined by plugins or extensions, removed when the defining plugin is unloaded
* * Act as a global variable that can be changed through the `hm_cvar` command
* * Simplifies creating customizable variables or settings for plugins and extensions
* * Can be linked to gamerules
* * Can have default, min, and max value rules
* * Stored as a string, converted to float for min/max boundaries
* * Can be retrieved/stored as string/bool/int/float
* * Can be hooked to trigger a function when the value has changed (by whatever means)